render to docs folder

--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,6 @@
 ---
 title: Python Hamilton and R targets comparisons
-format: html
 ---
 
-- [R targets](/targets-entry.html)
-- [Python Hamilton](/hamilton-entry.html)
+- [R targets](./targets-entry.html)
+- [Python Hamilton](./hamilton-entry.html)
